# crewai-product-analyst

./: .env.example  .gitignore  README.md  README.zh-CN.md  asset-lens_product_analysis.md  pyproject.toml
examples/: analyze_local.py
src/crewai_product_analyst/: agents.py  crew.py  main.py  tasks.py  tools.py
